[gd_scene load_steps=9 format=3 uid="uid://dqgijqu7t8rhp"]

[ext_resource type="Script" uid="uid://cwvu6u4wsitrb" path="res://objects/one_time_platform.gd" id="1_0u3kk"]
[ext_resource type="Texture2D" uid="uid://0hkhusgixsj7" path="res://objects/one_time_platform.png" id="2_xyudd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6d3p"]
size = Vector2(16, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tqdo"]
size = Vector2(16, 1)

[sub_resource type="Animation" id="Animation_xyudd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v6d3p"]
resource_name = "crumble"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0u3kk"]
resource_name = "crumble"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 2, 0.5, 2, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6d3p"]
_data = {
&"RESET": SubResource("Animation_xyudd"),
&"crumble": SubResource("Animation_v6d3p"),
&"shake": SubResource("Animation_0u3kk")
}

[node name="OneTimePlatform" type="StaticBody2D" node_paths=PackedStringArray("anim_player")]
script = ExtResource("1_0u3kk")
anim_player = NodePath("AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xyudd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_v6d3p")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_1tqdo")
debug_color = Color(0, 0.650687, 0.0751695, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v6d3p")
}

[node name="CrumbleTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="CrumbleTimer" to="." method="_on_crumble_timer_timeout"]
